# src/shared/errors/resource-not-found-error.ts
@@ -1,7 +1,7 @@
 import { TaggedError } from "better-result";
 
 /**
- * リソースが存在しない (汎用 / errorCode 4040 / HTTP 404)。
+ * リソースが存在しない (汎用 / code 4040 / HTTP 404)。
  */
 export class ResourceNotFoundError extends TaggedError(
   "ResourceNotFoundError",
